--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tune It</title>
+    <title>Tune Up</title>
+    <link type="image/png" href="assets/favicon.png" rel="icon">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="content wrapper">
-            <h1>- Tune It -</h1>
+            <h1>- Tune Up -</h1>
 
             <form action="">
                 <label for="tuning" class="visually-hidden">Select tuning:</label>
@@ -20,7 +21,6 @@
                     <option value="standard">Standard</option>
                     <option value="halfStepDown">Half-step-down</option>
                     <option value="fullStepDown">Full-step-down</option>
-                    // the values are purposely not kebab case
                 </select>
             </form>
 
